fix: remove !important, make table overflow correctly

--- a/src/app/components/order-list/order-list.component.scss
+++ b/src/app/components/order-list/order-list.component.scss
@@ -1,4 +1,6 @@
 .order-list {
+    overflow-x: auto;
+
     table {
         padding: 0px 20px;
         text-align: center;
